fix long h2 wrapping

--- a/css/style.css
+++ b/css/style.css
@@ -279,7 +279,6 @@ div.window img {
 
 div h2, h3 {
   margin-top: 0;
-  display: inline;
   padding: 0.5em;
 }
 div.window.right {
